--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "nodemailer-api",
   "version": "1.0.0",
-  "description": "",
+  "author": "Timothy Magee",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "author": "",
-  "license": "ISC",
+  "engines": {
+    "node": "16.19.0"
+  },
   "dependencies": {
     "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "helmet": "^6.0.1",
     "nodemailer": "^6.8.0"
   },
   "devDependencies": {
