--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "author": "Timothy Magee",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "engines": {
     "node": "16.19.0"
