created dotenv configuration

--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-SECRET_USER=demond.medhurst5@ethereal.email
-SECRET_PASS=bk5ft5VmX1UtWxHhM7
-SECRET_TO=demond.medhurst5@ethereal.email
+SECRET_USER=secret@gmail.com
+SECRET_PASS=secret_password
