--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "nodemailer-api",
+  "name": "nodemailer-api", 
+  "private": true,
   "version": "1.0.0",
   "author": "Timothy Magee",
   "main": "index.js",
